terminado la pagina principal

--- a/src/app/autor/pages/pagina-premiun/pagina-premiun.component.html
+++ b/src/app/autor/pages/pagina-premiun/pagina-premiun.component.html
@@ -1,1 +1,26 @@
-<p>pagina-premiun works!</p>
+<!-- <div class="container mt-4">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Código</th>
+          <th scope="col">Descripción</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Total</th>
+          <th scope="col">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let producto of productos; let i = index">
+          <td>{{ producto.codigo }}</td>
+          <td>{{ producto.descripcion }}</td>
+          <td>{{ producto.cantidad }}</td>
+          <td>{{ producto.precio | currency }}</td>
+          <td>{{ producto.cantidad * producto.precio | currency }}</td>
+          <td>
+            <button class="btn btn-danger" (click)="editarProducto(producto)">Editar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div> -->
