--- a/src/app/autor/pages/pagina-principal/pagina-principal.component.html
+++ b/src/app/autor/pages/pagina-principal/pagina-principal.component.html
@@ -1,1 +1,10 @@
-<p>pagina-principal works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-md-9">
+        <div class="col">
+          <app-table [autores]="autores" [obras]="obras" (autorSeleccionado)="obtenerAutor($event)"></app-table>
+        </div>
+        <hr>
+      </div>
+    </div>
+  </div>
