--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" (click)="redirectToLogin()">Login</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" (click)="cerrarSesion()">Cerrar sesion</a>
+          </li>
       </ul>
     </div>
   </nav>
