--- a/src/app/autor/components/modal/modal.component.html
+++ b/src/app/autor/components/modal/modal.component.html
@@ -22,7 +22,7 @@
                   Mostrar Fragmento de la obra
                 </button>
             <td>
-                <button type="button" class="btn btn-primary" (click)="addFavoriteObra()">
+                <button type="button" class="btn btn-primary" (click)="addFavoriteObra(i)">
                     Agregar esta obra a favoritos
                 </button>
           </tr>
