--- a/src/app/autor/pages/pagina-premiun/pagina-premiun.component.html
+++ b/src/app/autor/pages/pagina-premiun/pagina-premiun.component.html
@@ -31,7 +31,7 @@
 
   <div class="container mt-4">
     <h1>Obras Favoritos</h1>
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -44,7 +44,7 @@
             <td>{{i+1}}</td>
             <td>{{ obra.title }}</td>
             <td>
-            <button class="btn btn-danger">Eliminar</button>
+            <button class="btn btn-danger" (click)="EliminarObra(obra)">Eliminar</button>
           </td>
         </tr>
       </tbody>
